--- a/drum.html
+++ b/drum.html
@@ -453,7 +453,7 @@
             })
 
             document.getElementById("reset-button").addEventListener("click", function(){
-                if (window.confirm("Reset?")){
+                if (window.confirm("You are about to reset the machine \nYou will lose any data?")){
                     reset();
                     setUpMachine();
                 }
