--- a/drum.html
+++ b/drum.html
@@ -219,8 +219,8 @@
                 </div>
 
                 <div class="col-1 flex-col align-content-center justify-content-center">
-                    <span>TEMPO 2</span>
-                    <input id="tempo2" type="range" min="1" max="10" value="1" step="1">
+                    <span>FINE</span>
+                    <input id="tempo2" type="range" min="0" max="9" value="1" step="1">
                 </div>
 
                 <div class="col-8 drum-header" >
@@ -461,7 +461,14 @@
             })
 
             document.getElementById("tempo1").addEventListener("change", function(){ //set tempo
-                MACHINE.setTempo(this.value);
+                let fine = Number(document.getElementById("tempo2").value) * 0.1;
+                MACHINE.setTempo(this.value + fine);
+            })
+
+            document.getElementById("tempo2").addEventListener("change", function(){
+                let tempo = Number(document.getElementById("tempo1").value)
+                let newFine = Number(this.value) * 0.1;
+                MACHINE.setTempo(tempo + newFine);
             })
 
             document.getElementById("master-volume").addEventListener("change", function(){ //set master volume
@@ -486,7 +493,8 @@
             })
             
             function setUpMachine(){
-                document.getElementById("tempo1").value = MACHINE.tempoToInputValue();
+                document.getElementById("tempo1").value = Math.floor(MACHINE.tempoToInputValue());
+                document.getElementById("tempo2").value = (MACHINE.tempoToInputValue() % 1) * 10;
                 document.getElementById("master-volume").value = MACHINE.masterVolumeToInputValue();
                 document.getElementById("variation-input").value = MACHINE.basicVariationToInputValue();
                 document.getElementById("instrument-select").value = INSTRUMENT_CONTROLLER.currentInstrumentIndex;
