--- a/drum.html
+++ b/drum.html
@@ -263,10 +263,10 @@
 
                     <div class="col-10 flex-col justify-content-end"> 
                         <div class="mx-1">
-                            <div class="row col-12 gray"> A</div>
-                            <div class="row col-12 gray"> B</div>
-                            <div class="row col-12 gray"> C</div>
-                            <div class="row col-12 gray"> D</div>
+                            <div class="row col-12 gray"> 3/16 PER BEAT</div>
+                            <div class="row col-12 gray"> 6/16 PER BEAT</div>
+                            <div class="row col-12 gray"> 4/16 PER BEAT</div>
+                            <div class="row col-12 gray"> 8/16 PER BEAT</div>
                         </div>
                     </div>
 
