--- a/drum.html
+++ b/drum.html
@@ -258,7 +258,7 @@
                 <div class="col-9 row">
                     <div class="col-2">
                         <span>PRE-SCALE</span>
-                        <input id="pre-scale" orient="vertical" type="range" min="1" max="4" value="1" step="1">
+                        <input id="pre-scale" orient="vertical" type="range" min="0" max="3" value="1" step="1">
                     </div>
 
                     <div class="col-10 flex-col justify-content-end"> 
@@ -461,8 +461,9 @@
             })
 
             document.getElementById("tempo1").addEventListener("change", function(){ //set tempo
+                let newTempo = Number(this.value)
                 let fine = Number(document.getElementById("tempo2").value) * 0.1;
-                MACHINE.setTempo(this.value + fine);
+                MACHINE.setTempo(newTempo + fine);
             })
 
             document.getElementById("tempo2").addEventListener("change", function(){
@@ -471,12 +472,20 @@
                 MACHINE.setTempo(tempo + newFine);
             })
 
+            document.getElementById("pre-scale").addEventListener("change", function(){
+                MACHINE.setPartsPerBeat(Number(this.value))                
+                let tempo = Number(document.getElementById("tempo1").value);
+                let fine = Number(document.getElementById("tempo2").value) * 0.1;
+                MACHINE.setTempo(tempo + fine)
+            })
+
             document.getElementById("master-volume").addEventListener("change", function(){ //set master volume
-                MACHINE.setMasterVolume(this.value);
+                MACHINE.setMasterVolume(Number(this.value));
             })
             
             document.getElementById("variation-input").addEventListener("change", function(){ //set variation
-                MACHINE.setBasicVariation(this.value)
+                MACHINE.setBasicVariation(Number(this.value));
+
             })
 
             document.getElementById("instrument-select").addEventListener("change", function(){ //set variation
@@ -497,6 +506,7 @@
                 document.getElementById("tempo2").value = (MACHINE.tempoToInputValue() % 1) * 10;
                 document.getElementById("master-volume").value = MACHINE.masterVolumeToInputValue();
                 document.getElementById("variation-input").value = MACHINE.basicVariationToInputValue();
+                document.getElementById("pre-scale").value = MACHINE.partsPerBeatToInputValue();
                 document.getElementById("instrument-select").value = INSTRUMENT_CONTROLLER.currentInstrumentIndex;
                 document.getElementById("instrument-select").dispatchEvent(new Event("change"));
             }
