--- a/drum.html
+++ b/drum.html
@@ -141,8 +141,8 @@
                         <div class="col-1 flex-col justify-content-end align-content-center">
 
                             <div class="flex-col justify-content-end align-content-center">
-                                <span>TUNING</span>
-                                <input id="LC-tuning" class="w-90" type="range" min="1" max="11" value="1" step="1">
+                                <span>TONE</span>
+                                <input id="LC-tone" class="w-90" type="range" min="1" max="11" value="1" step="1">
                             </div>
 
                             <span><b>L</b>ow<b>C</b>onga</span>
@@ -152,8 +152,8 @@
                         <div class="col-1 flex-col justify-content-end align-content-center">
 
                             <div class="flex-col justify-content-end align-content-center">
-                                <span>TUNING</span>
-                                <input id="MC-tuning" class="w-90" type="range" min="1" max="11" value="1" step="1">
+                                <span>TONE</span>
+                                <input id="MC-tone" class="w-90" type="range" min="1" max="11" value="1" step="1">
                             </div>
 
                             <span><b>M</b>id<b>C</b>onga</span>
@@ -163,8 +163,8 @@
                         <div class="col-1 flex-col justify-content-end align-content-center">
 
                             <div class="flex-col justify-content-end align-content-center">
-                                <span>TUNING</span>
-                                <input id="HC-tuning" class="w-90" type="range" min="1" max="11" value="1" step="1">
+                                <span>TONE</span>
+                                <input id="HC-tone" class="w-90" type="range" min="1" max="11" value="1" step="1">
                             </div>
 
                             <span><b>H</b>i<b>C</b>onga</span>
