--- a/drum.html
+++ b/drum.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            ΝΤΡΑΜ
+            DRUM MACHINE
         </title>
 
         <link rel="stylesheet" href="fake-grid.css">
@@ -16,7 +16,7 @@
         <div id="main-container">    
             <div class="row">
                 <div class="col-12">
-                    <h2 class="drum-header">KHARNITAS</h2>
+                    <h2 class="drum-header">TR-808.5</h2>
                 </div>
             </div>
 
@@ -45,61 +45,97 @@
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="AC-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="AC-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="BD-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="BD-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="SD-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="SD-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="LC-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="LC-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="MC-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="MC-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="HC-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="HC-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="CL-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="CL-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="MA-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="MA-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="CB-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="CB-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="CY-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="CY-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="OH-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="OH-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
                             <input id="CH-level" class="w-90" type="range" min="0" max="10" value="5" step="1">
+
+                            <span>PITCH</span>
+                            <input id="CH-pitch" class="w-90" type="range" min="0" max="10" value="5" step="1">
                         </div>
                     </div>
 
@@ -224,7 +260,7 @@
                 </div>
 
                 <div class="col-8 drum-header" >
-                    <h2>KHARNITAS 2022 MACHINE</h2>
+                    <h2>TR-808.5 2022 DRUM MACHINE</h2>
                 </div>
 
                 <div class="col-1 flex-col align-content-center justify-content-center">
