den antexw allo frontend

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                     </div>
                 </div>
 
-                <div class="col-10 row align-content-end" id="instruments">
+                <div class="col-10 row align-content-end">
                     <div class="row col-12">
+
+                        <div class="col-1 flex-col justify-content-end align-content-center">
+                        </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
                             <span>LEVEL</span>
@@ -124,6 +127,9 @@
                     </div>
 
                     <div class="row col-12">
+
+                        <div class="col-1 flex-col justify-content-end align-content-center">
+                        </div>
 
                         <div class="col-1 flex-col justify-content-end align-content-center">
 
@@ -235,18 +241,18 @@
                     <input id="tempo1" type="range" min="1" max="10" value="1" step="0.2">
                 </div>
 
-                <div class="col-1 flex-col align-content-center justify-content-center">
+                <div class="col-2 flex-col align-content-center justify-content-center">
                     <span>FINE</span>
                     <input id="tempo2" type="range" min="0" max="9" value="1" step="1">
                 </div>
 
-                <div class="col-8 drum-header" >
-                    <h2>TR-808.5 2022 DRUM MACHINE</h2>
-                </div>
-
-                <div class="col-1 flex-col align-content-center justify-content-center">
+                <div class="col-2 flex-col align-content-center justify-content-center">
                     <span>MASTER VOLUME</span>
                     <input id="master-volume" type="range" min="0" max="10" value="5" step="1">
+                </div>
+
+                <div class="col-6 drum-header flex-col align-content-start" >
+                    <h2>TR-808.5 2022 DRUM MACHINE</h2>
                 </div>
 
             </div>
@@ -286,9 +292,6 @@
                             <div class="row col-12 gray"> 8/16 PER BEAT</div>
                         </div>
                         
-                    </div>
-                    <div class="col-1 flex-col justify-content-center align-content-center">
-                        <button class="btn" id="tap-button">TAP</button>
                     </div>
 
                 </div>
@@ -404,6 +407,9 @@
                                 16
                             </button>
                         </div>
+                    </div>
+                    <div class="col-1 flex-col justify-content-center align-content-center">
+                        <button class="btn" id="tap-button">TAP</button>
                     </div>
                 </div>
             </div>
