--- a/index.html
+++ b/index.html
@@ -235,7 +235,12 @@
                 </div>
             </div>
 
-            <div class="row justify-content-center col-12">
+            <div class="row justify-content-center col-12">       
+                        
+                <div class="col-6 drum-header flex-col align-content-center" >
+                    <h2>TR-808.5 2022 DRUM MACHINE</h2>
+                </div>
+
                 <div class="col-2 flex-col align-content-center justify-content-center">
                     <span>TEMPO</span>
                     <input id="tempo1" type="range" min="1" max="10" value="1" step="0.2">
@@ -250,11 +255,6 @@
                     <span>MASTER VOLUME</span>
                     <input id="master-volume" type="range" min="0" max="10" value="5" step="1">
                 </div>
-
-                <div class="col-6 drum-header flex-col align-content-start" >
-                    <h2>TR-808.5 2022 DRUM MACHINE</h2>
-                </div>
-
             </div>
 
             <div class="row col-12">
